[gd_scene load_steps=4 format=3 uid="uid://yx5jexw3bj2i"]

[ext_resource type="Script" uid="uid://cdjxnv3hurcfk" path="res://Scripts/pausemenu.gd" id="1_mhql6"]
[ext_resource type="FontFile" uid="uid://rd8qo46nok5b" path="res://Art/ByteBounce.ttf" id="1_y06jj"]
[ext_resource type="Texture2D" uid="uid://elcleci62mmf" path="res://Art/PauseMenu.png" id="2_ww34s"]

[node name="Pausemenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 37.0
offset_top = 8.0
offset_right = 77.0
offset_bottom = 48.0
script = ExtResource("1_mhql6")

[node name="Menu" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.898039)
z_index = -1
layout_mode = 0
offset_left = 48.0
offset_top = -30.0
offset_right = 220.0
offset_bottom = 192.0
texture = ExtResource("2_ww34s")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 78.0
offset_top = 49.0
offset_right = 191.0
offset_bottom = 114.0

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_y06jj")
text = "Resume"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_y06jj")
text = "Settings"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_y06jj")
text = "Exit to main menu"
